force-app/main/default/Objects/Course_Module__c/Course_Module__c.object-meta.xml
<CustomObject>
    <description>Single module for a course</description>
    <label>Course Module</label>
    <nameField>
        <label>Course Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>