force-app/main/default/Objects/Course_Module__c/fields/Canva_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Canva_Folder_Link__c</fullName>
    <description>Link to folder in Canvawhere module failes are kept</description>
    <inlineHelpText>Link to folder in Canvawhere module failes are kept</inlineHelpText>
    <label>Canva Folder Link</label>
    <type>Url</type>
</CustomField>