force-app/main/default/Objects/Course_Module__c/fields/Core_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Core_Concepts__c</fullName>
    <description>Primary topics covered in the module</description>
    <inlineHelpText>Primary topics covered in the module</inlineHelpText>
    <label>Core Concepts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>