force-app/main/default/objects/Course_Module__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <description>Course for which module is defined</description>
    <inlineHelpText>Course for which module is defined</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Modules</relationshipLabel>
    <relationshipName>Course_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>