force-app/main/default/Objects/Course_Module__c/fields/Course_Module_Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>Course_Module_Reference_Link__c</fullName>
    <description>Link to folder where module backups are saved.</description>
    <inlineHelpText>Link to folder where module backups are saved.</inlineHelpText>
    <label>Reference Link</label>
    <type>Url</type>
</CustomField>