force-app/main/default/Objects/Course_Module__c/fields/Google_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Folder_Link__c</fullName>
    <description>Link to folder in google drive where module backups are saved</description>
    <inlineHelpText>Link to folder in google drive where module backups are saved</inlineHelpText>
    <label>Google Folder Link</label>
    <type>Url</type>
</CustomField>