force-app/main/default/Objects/Course_Module__c/fields/Mission_Brief__c.field-meta.xml
<CustomField>
    <fullName>Mission_Brief__c</fullName>
    <description>short statement about the purpose of the module</description>
    <inlineHelpText>short statement about the purpose of the module</inlineHelpText>
    <label>Mission Brief</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>