force-app/main/default/Objects/Course_Module__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Used to order the modules within the course</description>
    <inlineHelpText>Used to order the modules within the course</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>