force-app/main/default/objects/Course_Module__c/fields/Penny_Context__c.field-meta.xml
<CustomField>
    <fullName>Penny_Context__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Admin-written plain-text coaching guidance for Penny. Written TO Penny, not to learners. Distinct from Mission_Brief__c which is written for learners.</description>
    <inlineHelpText>Admin-written plain-text coaching guidance for Penny. Written TO Penny, not to learners. Distinct from Mission_Brief__c which is written for learners.</inlineHelpText>
    <label>Penny Context</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>