force-app/main/default/Objects/Course_Module__c/fields/PercentCompleted__c.field-meta.xml
<CustomField>
    <fullName>PercentCompleted__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Indicates level of completion based on related course activities</description>
    <formula>IF(Total_Activities__c = 0, 0,(Total_Closed_Activities__c / Total_Activities__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates level of completion based on related course activities</inlineHelpText>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>