force-app/main/default/Objects/Course_Module__c/fields/Printables__c.field-meta.xml
<CustomField>
    <fullName>Printables__c</fullName>
    <description>List of printables for the Module</description>
    <inlineHelpText>List of printables for the Module</inlineHelpText>
    <label>Printables</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>