force-app/main/default/Objects/Course_Module__c/fields/Reflection_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Reflection_Prompt__c</fullName>
    <description>The statement that participants should reflect on and write about</description>
    <inlineHelpText>The statement that the participant should reflect on and write about</inlineHelpText>
    <label>Reflection Prompt</label>
    <type>TextArea</type>
</CustomField>