force-app/main/default/objects/Course_Module__c/fields/RESOLVE__c.field-meta.xml
<CustomField>
    <fullName>RESOLVE__c</fullName>
    <description>Penny uses to calibrate coaching tone and question style</description>
    <inlineHelpText>Penny uses to calibrate coaching tone and question style</inlineHelpText>
    <label>RESOLVE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recognize</fullName>
            </value>
            <value>
                <fullName>Explore</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Outline</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Verify</fullName>
            </value>
            <value>
                <fullName>Evolve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>