force-app/main/default/Objects/Course_Module__c/fields/Total_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_Activities__c</fullName>
    <description>Total number of related activities</description>
    <inlineHelpText>Total number of related activiries</inlineHelpText>
    <label>Total Activities</label>
    <summaryForeignKey>Course_Module_Activity__c.Course_Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>