force-app/main/default/Objects/Course_Module__c/fields/Total_Closed_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Activities__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Total number of related activities that have been completed or cancelled</description>
    <inlineHelpText>Total number of related activities that have been completed or cancelled</inlineHelpText>
    <label>Total Closed Activities</label>
    <summaryFilterItems>
        <field>Course_Module_Activity__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Module_Activity__c.Course_Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>