force-app/main/default/Objects/Course_Module__c/fields/Trail_Talk_Prompts__c.field-meta.xml
<CustomField>
    <fullName>Trail_Talk_Prompts__c</fullName>
    <description>Prompts to be used during trail talk sessions</description>
    <inlineHelpText>Prompts to be used during trail talk sessions</inlineHelpText>
    <label>Trail Talk Prompts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>