force-app/main/default/Objects/Course_Module__c/fields/Trail_Tools__c.field-meta.xml
<CustomField>
    <fullName>Trail_Tools__c</fullName>
    <description>List of artifacts and guides to use for the module</description>
    <inlineHelpText>List of artifacts and guides to use for the module</inlineHelpText>
    <label>Trail Tools</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>