force-app/main/default/Objects/Course_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PercentCompleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>